k8s/base/member/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: member
          image: ghcr.io/prgrms-be-adv-devcourse/member:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
