k8s/base/member/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member
spec:
  selector:
    app: member
  ports:
    - name: http
      port: 8081
      targetPort: 8081
